--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,5 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: install-vulkan-sdk
       run: choco install vulkan-sdk
+    - name: shader compiler test
+      run: glslc --version
     - name: build-debug
       run: mingw32-make -s build-debug
