--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: install-vulkan-sdk
       run: choco install vulkan-sdk
+    - name: environment variable setup
+      run: set PATH="%PATH%C:\VulkanSDK\1.2.198.1\Bin;"
     - name: shader compiler test
       run: glslc --version
     - name: build-debug
