--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,14 +9,10 @@ on:
 jobs:
   build:
 
-    runs-on: windows-2022
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
-    - name: install-vulkan-sdk
-      run: choco install vulkan-sdk
-    - name: environment variable setup
-      run: set PATH="%PATH%C:\VulkanSDK\1.2.182.0\Bin;"
     - name: shader compiler test
       run: glslc --version
     - name: build-debug
