--- a/meson.build
+++ b/meson.build
@@ -50,44 +50,54 @@ project('PlayVk', 'c', 'cpp',
   ]
 )
 
+# Variables
+vulkan_sdk_path = run_command(find_program('python'), '-c', 'import os; print(os.environ["VK_SDK_PATH"])', check : false).stdout().strip()
+vulkan_libs_path = vulkan_sdk_path + '/Lib/'
+
+
+# Defines
+defines_bm_internal__ = [
+
+]
+
 # Release Build Defines
-release_defines = [
+release_defines_bm_internal__ = [
 '-DPVK_RELEASE'
 ] 
 
 # Debug Build Defines
-debug_defines = [
+debug_defines_bm_internal__ = [
 '-DPVK_DEBUG'
 ]
 
 # Source files (common to all targets)
-sources = files(
+sources_bm_internal__ = files(
 
 )
 
 # Include directories
-inc = include_directories(
+inc_bm_internal__ = include_directories(
 'include'
 )
 
 # Library Install Directory
-lib_install_dir = get_option('libdir')/'playvk'
+lib_install_dir_bm_internal__ = get_option('libdir')/'playvk'
 
 # Dependencies
-dependencies = [
+dependencies_bm_internal__ = [
 dependency('common'),
 dependency('glfw3'),
 dependency('vulkanheaders')
 ]
 
 # Linker Arguments
-windows_link_args = [ 
+windows_link_args_bm_internal__ = [ 
 
 ]
-linux_link_args = [
+linux_link_args_bm_internal__ = [
 
 ]
-darwin_link_args = [
+darwin_link_args_bm_internal__ = [
 
 ]
 
@@ -98,120 +108,127 @@ darwin_link_args = [
 add_project_arguments('-m64', language : 'c')
 add_project_arguments('-m64', language : 'cpp')
 # Linker configuration
-link_args = []
-os_name = host_machine.system()
-if os_name == 'windows'
-  link_args += windows_link_args
-elif os_name == 'linux'
-  link_args += linux_link_args
-elif os_name == 'darwin'
-  link_args += darwin_link_args
+link_args_bm_internal__ = []
+os_name_bm_internal__ = host_machine.system()
+if os_name_bm_internal__ == 'windows'
+  link_args_bm_internal__ += windows_link_args_bm_internal__
+elif os_name_bm_internal__ == 'linux'
+  link_args_bm_internal__ += linux_link_args_bm_internal__
+elif os_name_bm_internal__ == 'darwin'
+  link_args_bm_internal__ += darwin_link_args_bm_internal__
 endif
-add_project_link_arguments('-m64', link_args, language : 'c')
-add_project_link_arguments('-m64', link_args, language : 'cpp')
+add_project_link_arguments('-m64', link_args_bm_internal__, language : 'c')
+add_project_link_arguments('-m64', link_args_bm_internal__, language : 'cpp')
 
 # Build type specific defines
-build_mode_defines = []
+build_mode_defines_bm_internal__ = defines_bm_internal__
 if get_option('buildtype') == 'release'
-  add_project_arguments(release_defines, language : 'c')
-  add_project_arguments(release_defines, language : 'cpp')
-  build_mode_defines += release_defines
+  add_project_arguments(release_defines_bm_internal__, language : 'c')
+  add_project_arguments(release_defines_bm_internal__, language : 'cpp')
+  build_mode_defines_bm_internal__ += release_defines_bm_internal__
 else
-  add_project_arguments(debug_defines, language : 'c')
-  add_project_arguments(debug_defines, language : 'cpp')
-  build_mode_defines += debug_defines
+  add_project_arguments(debug_defines_bm_internal__, language : 'c')
+  add_project_arguments(debug_defines_bm_internal__, language : 'cpp')
+  build_mode_defines_bm_internal__ += debug_defines_bm_internal__
 endif
 
 # pkg-config package installation
-python = find_program('python')
 # Try PKG_CONFIG_PATH first, typicallly it succeeds on MINGW64 (MSYS2)
-result = run_command(python, '-c', 'import os; print(os.environ["PKG_CONFIG_PATH"])', check : false)
-pkgconfig_install_path = ''
-if result.returncode() == 0
-  str = result.stdout()
+python_pkg_config_path_result_bm_internal__ = run_command(find_program('python'), '-c', 'import os; print(os.environ["PKG_CONFIG_PATH"])', check : false)
+pkgconfig_install_path_bm_internal__ = ''
+if python_pkg_config_path_result_bm_internal__.returncode() == 0
+  str = python_pkg_config_path_result_bm_internal__.stdout()
   # Unix
   if str.startswith('/')
-    pkgconfig_install_path = str.replace(';', ':').split(':')[0]
+    pkgconfig_install_path_bm_internal__ = str.replace(';', ':').split(':')[0]
   # Windows
   else
-    pkgconfig_install_path = str.split(';')[0]
+    pkgconfig_install_path_bm_internal__ = str.split(';')[0]
   endif
 endif
-if pkgconfig_install_path == ''
+if pkgconfig_install_path_bm_internal__ == ''
   # Otherwise use pkg-config to query its lookup directories
   message('PKG_CONFIG_PATH seems to be empty, trying another method')
-  result = run_command('pkg-config', '--variable', 'pc_path', 'pkg-config', check : false)
-  if result.returncode() == 0
-    str = result.stdout()
+  python_pkg_config_path_result_bm_internal__ = run_command('pkg-config', '--variable', 'pc_path', 'pkg-config', check : false)
+  if python_pkg_config_path_result_bm_internal__.returncode() == 0
+    str = python_pkg_config_path_result_bm_internal__.stdout()
     if str.startswith('/')
-      pkgconfig_install_path = str.replace(';', ':').split(':')[0]
+      pkgconfig_install_path_bm_internal__ = str.replace(';', ':').split(':')[0]
     else
-      pkgconfig_install_path = str.split(';')[0]
+      pkgconfig_install_path_bm_internal__ = str.split(';')[0]
     endif
   # Finally if the above attempts fail, use 'libdir' value
   else
-    pkgconfig_install_path = get_option('libdir')
+    pkgconfig_install_path_bm_internal__ = get_option('libdir')
   endif
 endif
-message('pkg config path: ' + pkgconfig_install_path)
+message('pkg config path: ' + pkgconfig_install_path_bm_internal__)
 
 #-------------------------------------------------------------------------------
 #--------------------------------BUILD TARGETS----------------------------------
 pkgmod = import('pkgconfig')
 
 # -------------- Target: playvk_headers ------------------
-playvk_headers_sources = [
+playvk_headers_sources_bm_internal__ = [
 
 ]
-playvk_headers_dependencies = [
+playvk_headers_include_dirs_bm_internal__ = [
 
 ]
-playvk_headers_link_args = {
+playvk_headers_dependencies_bm_internal__ = [
+
+]
+playvk_headers_link_args_bm_internal__ = {
 'windows' : [],
 'linux' : [],
 'darwin' : []
 }
-playvk_headers_build_defines = [
+playvk_headers_build_defines_bm_internal__ = [
 
 ]
-playvk_headers_use_defines = [
+playvk_headers_use_defines_bm_internal__ = [
 
 ]
 playvk_headers_dep = declare_dependency(
-	include_directories: inc,
-	compile_args: playvk_headers_use_defines + build_mode_defines
+	include_directories: [inc_bm_internal__, playvk_headers_include_dirs_bm_internal__],
+	compile_args: playvk_headers_use_defines_bm_internal__ + build_mode_defines_bm_internal__
 )
 pkgmod.generate(	name: 'PlayVk',
 	description: 'Single header file library for simplifying vulkan',
 	filebase: 'playvk_headers',
-	install_dir: pkgconfig_install_path,
-	subdirs: [ 'PlayVk' ],
-	extra_cflags: playvk_headers_use_defines + build_mode_defines
+	install_dir: pkgconfig_install_path_bm_internal__,
+	subdirs: [
+'PlayVk'
+]
+, 	extra_cflags: playvk_headers_use_defines_bm_internal__ + build_mode_defines_bm_internal__
 )
 
 # -------------- Target: main ------------------
-main_sources = [
+main_sources_bm_internal__ = [
 'source/main.c'
 ]
-main_dependencies = [
+main_include_dirs_bm_internal__ = [
 
 ]
-main_link_args = {
-'windows' : ['-L"$(VK_SDK_PATH)/Lib/"', '-lvulkan-1', '-lgdi32'],
-'linux' : ['-L"$(VK_SDK_PATH)/Lib/"', '-lvulkan-1'],
+main_dependencies_bm_internal__ = [
+
+]
+main_link_args_bm_internal__ = {
+'windows' : ['-L' +  vulkan_libs_path, '-lvulkan-1', '-lgdi32'],
+'linux' : ['-L' +  vulkan_libs_path, '-lvulkan-1'],
 'darwin' : []
 }
-main_defines = [
+main_defines_bm_internal__ = [
 
 ]
 main = executable('main',
-	main_sources + sources,
-	dependencies: dependencies + main_dependencies,
-	include_directories: inc,
+	main_sources_bm_internal__ + sources_bm_internal__,
+	dependencies: dependencies_bm_internal__ + main_dependencies_bm_internal__,
+	include_directories: [inc_bm_internal__, main_include_dirs_bm_internal__],
 	install: false,
-	c_args: main_defines,
-	cpp_args: main_defines, 
-	link_args: main_link_args[host_machine.system()],
+	c_args: main_defines_bm_internal__,
+	cpp_args: main_defines_bm_internal__, 
+	link_args: main_link_args_bm_internal__[host_machine.system()],
 	gnu_symbol_visibility: 'hidden'
 )
 
